# dodo-alive-project

./: .gitignore  README.md
Dodo-Hopper-Project-WS2020/: .gitignore  README.md
Dodo-Hopper-Project-WS2020/examples/SLip/: CMakeLists.txt  start.sh  visu.py
Dodo-Hopper-Project-WS2020/examples/SLip/model/: articulatedLeg3.lua  double_pendulum.lua  slip.lua
Dodo-Hopper-Project-WS2020/examples/SLip/output/: aniFallingDown1.csv  aniFallingDownWithInitVel.csv  animation.csv  animationArticulatedLegModel.csv
Dodo-Hopper-Project-WS2020/examples/SLip/output/csv/: D20.csv  D_1.csv  D_3.csv  P20_D7.csv  P220_D70.csv  P_1.csv  P_15.csv  P_25.csv  P_50.csv  P_6.csv
Dodo-Hopper-Project-WS2020/examples/SLip/src/: +  .dynamics.cc.swn  arkodeInterface.cc  arkodeInterface.h  articulatedLeg.cc  articulatedLeg.cc.orig  articulatedLeg.h  dynamics.cc  dynamics_BACKUP_8007.cc  dynamics_BASE_8007.cc  dynamics_LOCAL_8007.cc  dynamics_REMOTE_8007.cc  slip.cc  slip.h
Dodo-Hopper-Project-WS2020/project_planning/: logbook  product_backlog
code/: run_articulated_leg_walker.py
code/motion_hybrid_automaton/: guard_functions.py  jump_functions.py  motion_hybrid_automaton.py
code/solver/: solver.py
documentation/report/: report.bib  report.tex  report_onecolumn.tex
dodo-gruppe-1-master/: .gitignore  README.md
dodo-gruppe-1-master/Code-Python/: README.md
meetings/: 14_06_21.md
own-project/: articulated_leg_walker.py  articulated_leg_walker_old.py  dynamics.py  flight_phase_state.py  math_model.py  motion_state_machine.py  phase_state.py  run_articulated_leg_walker.py  stance_phase_state.py
own-project/gui/: robot_plotter.py
own-project/model/: articulatedLeg.lua  slip_model_params.py
own-project/motion_hybrid_automaton/: continuous_state.py  guard_functions.py  jump_functions.py  (+1 more)
(+29 files in other folders)
